# gnn4pde

./: .gitmodules  README.md  feb12.py  feb4  feb4.csv  feb4.html  feb4.py  gcn_poisson_2d.py  gcn_poisson_2d_connected.py  gcn_poisson_2d_expts.py  gcn_poisson_2d_full.py  gcn_poisson_2d_int.py  gcn_poisson_2d_int_inv.py  gcn_xy_poisson_2d.py  poisson_2d.py  pyproject.toml
core/: dash.py  fno_2d.py  fno_block_2d.py  gcn.py  make_html_table.py  poisson_2d.py
docs/: rajarshi_Feb2.tex
examples/: 2subdomains.py  fem_inv_logs.txt  fem_inv_poisson_2d.py  fem_poisson_2d.py
examples/fno_forward_poisson_2d/: fno_inp_xy_sdf.py
examples/gcn_fno_forward_poisson_2d/: gcn_fno_inp_xys.py
examples/gcn_fno_inverse_poisson_2d/: gcn_fno_inp_xys.py
examples/gcn_forward_poisson_2d/: cgcn_rand_inp1d.py  gcn_inp_xy.py  gcn_inp_xy_fullmesh.py
examples/gcn_inverse_poisson_2d/: find_forcing_const.py  find_forcing_const_cgcn_inp1d_out1d.py  find_forcing_const_cgcn_inp1d_out2d.py  find_forcing_const_gcn_inp1d_out1d_penalty_loss.py  find_forcing_const_gcn_inp1d_out2d.py  sanity_check.py
examples/output/: fem_poisson_2d_output.txt
experiments/find_forcing_const/: expt_plots.py  find_forcing_const.py  hyper_param_robust.py
trial/: notes.txt
