[project]
name = "gnn4pde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
tool.uv.package = true
dependencies = [
    "equinox>=0.12.2",
    "jax>=0.6.2",
    "matplotlib>=3.10.3",
    "optax>=0.2.5",
    "tqdm>=4.67.1",
    "triangle>=20250106",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
